<resources>
    <string name="app_name">Trivia</string>
    <string name="language">en</string>
    <string name="sub_title_opening">A trivia game with knowledge enrichment</string>
    <string name="title_text_opening">Think. Play. Win</string>
    <string name="get_started_text">Get Started</string>
    <string name="out_of_text">Question: </string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="next_button">NEXT</string>
    <string name="correct_answer">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="create_text">Create Account</string>
    <string name="or_text">Or</string>
    <string name="username_hint">Username</string>
    <string name="or_text_">OR</string>
    <string name="valid_password">Enter at least 6 characters</string>
    <string name="wait_login">Please wait while login...</string>
    <string name="wrong_details">\tWrong details\nPlease try again</string>
    <string name="empty_fields">Empty fields are not allowed</string>
    <string name="valid_email">Enter Valid E-mail address</string>
    <string name="server_error">Server Error\nTry again</string>
    <string name="correct_password">Wrong Password</string>
    <string name="correct_email_address">Wrong Email</string>
    <string name="score_text2">Current Score: </string>
    <string name="Return_home_button_text">Return Home</string>
    <string name="button_return_home">Return Home</string>
    <string name="Category">Choose Category: </string>
    <string name="bt_Sport">Sport</string>
    <string name="bt_Music">Music </string>
    <string name="bt_Movies">Movies</string>
    <string name="bt_Food">Food</string>
    <string name="bt_Animals">Animals</string>
    <string name="txtTotalQuestion">Question: 1/20</string>
    <string name="txtScore">Score: </string>
    <string name="button_Next">Confirm</string>
    <string name="txt_result_title">Result of your quiz </string>
    <string name="result_tv_HighScore">High Score:  </string>
    <string name="result_your_score">Your Score: </string>
    <string name="result_tv_Num_of_Ques">Total Questions:  </string>
    <string name="result_tv_correct_Ques">Correct Answers:  </string>
    <string name="result_tv_wrong_Ques">Wrong Answers:  </string>
    <string name="bt_result_main_menu">Play again  </string>
    <string name="txt_correct_dialog">Correct Answer! </string>
    <string name="textView_Score">Score: </string>
    <string name="txt_correct_dialog_ok">OK  </string>
    <string name="txt_wrong_dialog">Wrong Answer! </string>
    <string name="textView_Correct_Answer">Final score of Quiz:  </string>
    <string name="txt_wrong_dialog_ok">OK  </string>
    <string name="txt_finalScore">Final Score  </string>
    <string name="bt_finalScore_ok">OK  </string>
    <string name="txt_TimesUp">Times Up!  </string>
    <string name="txt_GameOver">Game Over  </string>
    <string name="bt_Times_ok">Play again  </string>
    <string name="double_back_bt_exit">Press back again to exit</string>
    <string name="select_answer">Please select an Answer</string>
    <string name="question_txt">Question</string>
    <string name="the_correct_answer_is">Correct Answer: </string>
    <string name="global_sport"> sport</string>
    <string name="global_music"> music</string>
    <string name="global_animals"> animals</string>
    <string name="global_movies"> movies</string>
    <string name="global_food"> food</string>
    <string name="newHighScore">Congrats you have reached a new high score: </string>
    <string name="high_score_main_menu">Main menu </string>


</resources>