<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#AB46D2"
    android:gravity="center"
    tools:context=".Activities.ResultActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="223dp"
        android:layout_marginTop="-30dp"
        app:srcCompat="@drawable/results_photo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/txt_result_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="#AA2EE6"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <TextView
            android:id="@+id/result_tv_HighScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="start"
            android:text="@string/result_tv_HighScore"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/result_tv_your_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/result_your_score"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/result_tv_Num_of_Ques"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/result_tv_Num_of_Ques"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/result_tv_correct_Ques"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/result_tv_correct_Ques"
            android:layout_marginTop="20dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/result_tv_wrong_Ques"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="20dp"
            android:text="@string/result_tv_wrong_Ques"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginBottom="30dp"
            android:textStyle="bold" />



    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_result_main_menu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20sp"
        android:textColor="@color/white"
        android:backgroundTint="#B689C0"
        android:background="@drawable/round"
        android:text="@string/bt_result_main_menu"
        android:textAllCaps="false"
        android:textSize="30sp" />
</LinearLayout>