<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="275dp"
    android:layout_gravity="center"
    android:background="@drawable/round_dialog_wrong_answer"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/txt_wrong_dialog"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_Correct_Answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:ellipsize="end"
        android:paddingLeft="2dp"
        android:paddingTop="10dp"
        android:paddingRight="2dp"
        android:paddingBottom="10dp"
        android:singleLine="true"
        android:text="@string/textView_Correct_Answer"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_wrongDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#D61C4E"
        android:text="@string/txt_wrong_dialog_ok"
        android:textColor="@color/black"
        android:textSize="35sp"

        android:textStyle="bold" />
</LinearLayout>