<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#AB46D2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".Activities.OpeningActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="-70dp"
        android:layout_width="match_parent"
        android:layout_height="238dp"
        app:srcCompat="@drawable/trivia_opening" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/title_text_opening"
        android:layout_marginTop="50dp"
        android:textColor="#B689C0"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            app:cardBackgroundColor="#AB46D2"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/subTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sub_title_opening"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="19sp" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/startButton"
        android:text="@string/get_started_text"
        android:textColor="#FFFFFF"
        android:backgroundTint="#B689C0"
        android:background="@drawable/round"
        android:layout_margin="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>