<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9126bd"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/txtTotalQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtTotalQuestion"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txtScore"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/txtTotalQuestion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/txtTimer"
        app:layout_constraintHorizontal_weight="1"
        />


    <TextView
        android:id="@+id/txtTimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="00:30"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/txtTotalQuestion"
        app:layout_constraintLeft_toRightOf="@id/txtScore"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_weight="1"
        />

    <TextView
        android:id="@+id/txtQuetsionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:padding="10dp"
        android:text="Question place"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/txtScore"
        />

    <RadioGroup
        android:id="@+id/raido_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtQuetsionContainer"
        >

        <RadioButton
            android:id="@+id/radio_button1"
            style="@style/ButtonStyle"
            android:layout_width="374dp"
            android:layout_height="69dp"
            android:shadowColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:backgroundTint="#ab2fb7"
            android:button="@null"
            android:layout_margin="15dp"
            android:text="@string/true_button"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            />


        <RadioButton
            android:id="@+id/radio_button2"
            style="@style/ButtonStyle"
            android:layout_width="374dp"
            android:layout_height="69dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:backgroundTint="#ab2fb7"
            android:button="@null"
            android:layout_margin="15dp"
            android:text="@string/true_button"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            />

        <RadioButton
            android:id="@+id/radio_button3"
            style="@style/ButtonStyle"
            android:layout_width="374dp"
            android:layout_height="69dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:backgroundTint="#ab2fb7"
            android:button="@null"
            android:text="@string/true_button"
            android:textAlignment="center"
            android:layout_margin="15dp"
            android:textColor="@color/white"
            android:textSize="20sp"     />

        <RadioButton
            android:id="@+id/radio_button4"
            style="@style/ButtonStyle"
            android:layout_width="374dp"
            android:layout_height="69dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:backgroundTint="#ab2fb7"
            android:button="@null"
            android:text="@string/true_button"
            android:textAlignment="center"
            android:layout_margin="15dp"
            android:textColor="@color/white"
            android:textSize="20sp"     />
    </RadioGroup>


    <Button
        android:id="@+id/button_Next"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:backgroundTint="#ab2fb7"
        android:padding="5dp"
        android:textColor="@color/white"
        android:text="@string/button_Next"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="60dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>